--- a/templates/prototype/index.html
+++ b/templates/prototype/index.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 {% if discussion %}
     <ul>
     {% for post, comments in discussion %}
@@ -14,3 +17,4 @@
 {% else %}
     <p>No posts are available.</p>
 {% endif %}
+{% endblock %}
