--- a/templates/prototype/index.html
+++ b/templates/prototype/index.html
@@ -1,22 +1,7 @@
 {% extends "prototype/base.html" %}
 
-{% block content %}
-{% if discussion %}
-    <ul>
-    {% for post, comments in discussion %}
-        <li>
-        {{ post }}
-        {% if comments %}
-            <ul>
-            {% for comment in comments %}
-                <li>{{ comment }}</li>
-            {% endfor %}
-            </ul>
-        {% endif %}
-        </li>
-    {% endfor %}
-    </ul>
-{% else %}
-    <p>No posts are available.</p>
-{% endif %}
+{% block nav %}
+    <li class="active"><a href="/prototype/">Inbox</a></li>
+    <li><a href="/prototype/group/1/">Group 1</a></li>
+    <li><a href="/prototype/group/2/">Group 2</a></li>
 {% endblock %}
