--- a/templates/prototype/group.html
+++ b/templates/prototype/group.html
@@ -2,8 +2,8 @@
 
 {% block nav %}
     <li><a href="/prototype/">Inbox</a></li>
-    <li{% if grpid == 1 %}class="active"{% endif %}><a href="/prototype/group/1/">Group 1</a></li>
-    <li{% if grpid == 2 %}class="active"{% endif %}><a href="/prototype/group/2/">Group 2</a></li>
+    <li{% if grpid == "1" %} class="active" {% endif %}><a href="/prototype/group/1/">Group 1</a></li>
+    <li{% if grpid == "2" %}class="active"{% endif %}><a href="/prototype/group/2/">Group 2</a></li>
 {% endblock %}
 
 {% block content %}
