--- a/templates/prototype/base.html
+++ b/templates/prototype/base.html
@@ -1,28 +1,60 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <title>{% block title %}Bulletin{% endblock %}</title>
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <div id="sidebar" class="tabs-left">
-        <ul class="nav nav-tabs">
-          {% block nav %}
-          <li><a href="/prototype/">Inbox</a></li>
-          <li><a href="/prototype/group/1/">Group 1</a></li>
-          <li><a href="/prototype/group/2/">Group 2</a></li>
-          {% endblock %}
-        </ul>
-      </div><!-- id="sidebar" -->
-      <div id="content">
-        {% block content %}
-        <p>Content goes here</p>
-        <p>I really hope this doesn't show up</p>
-        {% endblock %}
-      </div><!-- id="content" -->
-    </div><!-- class="container" -->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-  </body>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Bulletin</title>
+        <!-- Bootstrap -->
+        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-combined.min.css" rel="stylesheet">
+        <link href="/static/css/custom.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="container-fluid">
+            <div id='white' class="span2">.</div>
+            <div class="span5">
+                <h1>Bulletin<small> team communication</small></h1>
+            </div>
+            <div class="span5">
+                <form method="post" id='login'>
+                    <input id="login" placeholder="username" type="text" name="login" maxlength="25">
+                    <input id="password" placeholder="password" type="text" name="password" maxlength="50">
+                    <!--<input class='pull-right' type="submit" value="Login">-->
+                </form>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="span2">
+                <div class="tabbable tabs-left">
+                    <ul id='tabs' class="nav nav-tabs">
+                      {% block nav %}
+                      <li><a href="/prototype/">Inbox</a></li>
+                      <li><a href="/prototype/group/1/">Group 1</a></li>
+                      <li><a href="/prototype/group/2/">Group 2</a></li>
+                      {% endblock %}
+                    </ul>
+                    </div>
+            </div>
+            <div id='content' class="span10">
+              <div class="hero-unit">
+                <h3>Announcement</h3>
+                <p>
+                  Battle stations
+                </p>
+              </div>
+              <form method="post">
+                    <p>
+                        <textarea id="id_message" class='span10' rows="10" cols="40" placeholder="Talk with your team" name="message"></textarea>
+                    </p>
+                <p>
+                    <input id="id_author" placeholder="email@address.com" type="text" name="author" maxlength="75">
+                </p>
+                <input type="submit" value="Post">
+              </form>
+              {% block content %}
+              <p>Content goes here</p>
+              <p>I really hope this doesn't show up</p>
+              {% endblock %}
+            </div>
+        </div>
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js"></script>
+    </body>
 </html>
