--- a/templates/prototype/group.html
+++ b/templates/prototype/group.html
@@ -2,32 +2,36 @@
 
 {% block nav %}
     <li><a href="/prototype/">Inbox</a></li>
-    <li{% if grpid == 1 %}class="active"{% endif %}><a href="/prototype/group/1/">Group 1</a></li>
-    <li{% if grpid == 2 %}class="active"{% endif %}><a href="/prototype/group/2/">Group 2</a></li>
+    <li{% if grpid == "1" %} class="active" {% endif %}><a href="/prototype/group/1/">Group 1</a></li>
+    <li{% if grpid == "2" %} class="active" {% endif %}><a href="/prototype/group/2/">Group 2</a></li>
 {% endblock %}
 
 {% block content %}
-{% if discussion %}
-    {% for post, comments in discussion %}
-        <div class='post'>
-            <div class="span1 avatar">
-                <div class="well well-small">
-                    avatar
-                </div>
-            </div>
-            <div class="span9 post">
-                <div class="well well-small">
-                    {{ post }}
-                    {% if comments %}
-                        {% for comment in comments %}
-                            <div class="well well-small comment">
-                                {{ comment }}
-                            </div>
-                        {% endfor %}
-                    {% endif %}
-                </div>
+<form method="post">
+    {{ form.as_p }}
+    <input type="submit" value="Post" />
+</form>
+{% if post_list %}
+    {% for post in post_list %}
+    <div class="post">
+        <div class="span1 avatar">
+            <div class="well well-small">
+                avatar
             </div>
         </div>
+        <div class="span9 post">
+            <div class="well well-small">
+                {{ post }}
+                {% if post.comment_set.all %}
+                    {% for comment in post.comment_set.all %}
+                    <div class="well well-small comment">
+                        {{ comment }}
+                    </div>
+                    {% endfor %}
+                {% endif %}
+            </div>
+        </div>
+    </div>
     {% endfor %}
 {% else %}
     <p>No posts are available.</p>
