--- a/templates/prototype/group.html
+++ b/templates/prototype/group.html
@@ -13,7 +13,7 @@
 </form>
 {% if post_list %}
     {% for post in post_list %}
-    <div class="post">
+    <div class="post clearfix">
         <div class="span1 avatar">
             <div class="well well-small">
                 avatar
