--- a/static_resources/css/custom.css
+++ b/static_resources/css/custom.css
@@ -6,10 +6,6 @@
     margin-right: 0;
 }
 
-.tabs-left {
-    float: right;
-}
-
 #login > input {
     width: 40%;
 }
@@ -22,11 +18,22 @@
     margin-right: 0;
 }
 
-#content {
-    border-top: 1px solid #DDD;
+#content-container {
+    border: 1px solid #DDD;
+    border-left: 0;
+    margin: 0 0 0 -1px;
 }
 
-.hero-unit {
+#content {
+	border-left: 1px solid #DDD;
+	padding: 10px;
+}
+
+#announcement {
+	margin-bottom: 0;
+}
+
+.hero-unit-small {
     margin: 10px;
     padding: 5px;
 }
