--- a/templates/prototype/group.html
+++ b/templates/prototype/group.html
@@ -16,16 +16,24 @@
     <div class="post clearfix">
         <div class="span1 avatar">
             <div class="well well-small">
-                avatar
+                <img src="http://www.acme-articles.com/default_photo/profile.jpg" alt="author's avatar" />
             </div>
         </div>
         <div class="span9 post">
             <div class="well well-small">
-                {{ post }}
+                <p>
+                    <strong>{{ post.author }}</strong>
+                    <em>{{ post.time_posted }}</em>
+                </p>
+                <p>{{ post.message }}</p>
                 {% if post.comment_set.all %}
                     {% for comment in post.comment_set.all %}
                     <div class="well well-small comment">
-                        {{ comment }}
+                        <p>
+                            <strong>{{ comment.author }}</strong>
+                            <em>replied:</em>
+                        </p>
+                        <p>{{ comment.message }}</p>
                     </div>
                     {% endfor %}
                 {% endif %}
