--- a/templates/prototype/group.html
+++ b/templates/prototype/group.html
@@ -1,5 +1,7 @@
 {% extends "prototype/base.html" %}
 
+{% load gravatar %}
+
 {% block nav %}
     <li><a href="/prototype/">Inbox</a></li>
     <li{% if grpid == "1" %} class="active" {% endif %}><a href="/prototype/group/1/">Group 1</a></li>
@@ -16,7 +18,9 @@
     <div class="post clearfix">
         <div class="span1 avatar">
             <div class="well well-small">
-                <img src="http://www.acme-articles.com/default_photo/profile.jpg" alt="author's avatar" />
+                <!--<img src="http://www.acme-articles.com/default_photo/profile.jpg" alt="author's avatar" />-->
+                <img src="{{ post.author|gravatar:'50' }}" alt="author's gravatar" />
+                <!-- gravatar filter takes user's eamil and img size as an argument -->
             </div>
         </div>
         <div class="span9 post">
