Added session backend (no implementation yet).

--- a/templates/prototype/base.html
+++ b/templates/prototype/base.html
@@ -24,6 +24,11 @@
             <div class="span12">
                 <div class="tabbable tabs-left row-fluid">
                     <ul id='tabs' class="nav nav-tabs span2">
+                        <!-- 
+                        If this is where you want to list all of the current user's groups in the active
+                        session, then do so here, likely with a for loop.  This will not function, however
+                        until we have properly working user logins.
+                        -->
                         {% block nav %}
                         <li><a href="/prototype/">Inbox</a></li>
                         <li><a href="/prototype/group/1/">Group 1</a></li>
