Changed placeholder to email.

--- a/templates/prototype/base.html
+++ b/templates/prototype/base.html
@@ -14,7 +14,7 @@
             </div>
             <div class="span5">
                 <form method="post" id='login'>
-                    <input id="login" placeholder="username" type="text" name="login" maxlength="25">
+                    <input id="login" placeholder="email" type="text" name="login" maxlength="25">
                     <input id="password" placeholder="password" type="password" name="password" maxlength="50">
                     <!--<input class='pull-right' type="submit" value="Login">-->
                 </form>
