--- a/templates/prototype/register.html
+++ b/templates/prototype/register.html
@@ -6,21 +6,7 @@
 
 {% block content %}
 <form method="post">
-    {% for field in form %}
-    <div class="fieldWrapper">
-        <!--
-        This is simply because the implementation we're using
-        treats the username as the email address when doing
-        authentication.
-        -->
-        {% if field.name != "username" %}
-            <label for="id_subject">
-                    {{ field.label_tag }}
-            </label>
-            {{ field }}
-        {% endif %}
-    </div>
-    {% endfor %}
+    {{ form.as_p }}
     <input type="submit" value="Register" />
 </form> 
 {% endblock %}
