--- a/templates/prototype/email_sent.html
+++ b/templates/prototype/email_sent.html
@@ -6,8 +6,8 @@
 
 {% block content %}
     {% if email %}
-        <h1>Email confirmation sent to {{ email }}</h1>
+        Email confirmation sent to <em>{{ email }}</em>
     {% else %}
-        <h1>This page has expired</h1>
+        This page has expired
     {% endif %}
 {% endblock %}
