--- a/templates/base.html
+++ b/templates/base.html
@@ -30,9 +30,9 @@
                         until we have properly working user logins.
                         -->
                         {% block nav %}
-                        <li><a href="/prototype/">Inbox</a></li>
-                        <li><a href="/prototype/group/1/">Group 1</a></li>
-                        <li><a href="/prototype/group/2/">Group 2</a></li>
+                        <li><a href="/">Inbox</a></li>
+                        <li><a href="/group/1/">Group 1</a></li>
+                        <li><a href="/group/2/">Group 2</a></li>
                         {% endblock %}
                     </ul>
                     <div id='content-container' class="tab-content span10">
