--- a/templates/group.html
+++ b/templates/group.html
@@ -1,11 +1,11 @@
-{% extends "prototype/base.html" %}
+{% extends "base.html" %}
 
 {% load gravatar %}
 
 {% block nav %}
-    <li><a href="/prototype/">Inbox</a></li>
-    <li{% if grpid == "1" %} class="active" {% endif %}><a href="/prototype/group/1/">Group 1</a></li>
-    <li{% if grpid == "2" %} class="active" {% endif %}><a href="/prototype/group/2/">Group 2</a></li>
+    <li><a href="/">Inbox</a></li>
+    <li{% if grpid == "1" %} class="active" {% endif %}><a href="/group/1/">Group 1</a></li>
+    <li{% if grpid == "2" %} class="active" {% endif %}><a href="/group/2/">Group 2</a></li>
 {% endblock %}
 
 {% block content %}
