--- a/templates/login.html
+++ b/templates/login.html
@@ -8,6 +8,9 @@
 {% if user %}
     <h1>Welcome back, {{ user.first_name }}!</h1>
 {% else %}
+    {% if not valid %}
+        <h3>Invalid email or password</h3>
+    {% endif %}
     <form method="post">
         {{ form.as_p }}
         <input type="submit" value="Log In" />
