--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% if user_id %}
+    {% block login %}
+    Your user id is {{ user_id }}
+    {% endblock %}
+{% endif %}
 {% block nav %}
     <li class="active"><a href="/">Inbox</a></li>
     <li><a href="/group/1/">Group 1</a></li>
