--- a/templates/login.html
+++ b/templates/login.html
@@ -5,15 +5,17 @@
 {% endblock %}
 
 {% block content %}
-{% if user %}
-    <h1>Welcome back, {{ user.first_name }}!</h1>
-{% else %}
-    {% if not valid %}
-        <h3>Invalid email or password</h3>
-    {% endif %}
-    <form method="post">
-        {{ form.as_p }}
-        <input type="submit" value="Log In" />
-    </form>
+{% if not valid %}
+    <h3>Invalid email or password</h3>
 {% endif %}
+{% if not cookies %}
+    <h3>Please enable cookies</h3>
+{% endif %}
+{% if not active %}
+    <h3>User not active. Please check your email for validation</h3>
+{% endif %}
+<form method="post">
+    {{ form.as_p }}
+    <input type="submit" value="Log In" />
+</form>
 {% endblock %}
