--- a/templates/login.html
+++ b/templates/login.html
@@ -4,8 +4,10 @@
 <!-- empty -->
 {% endblock %}
 
+{% block content %}
 <h3>{{ state }}</h3>
 <form method="post">
     {{ form.as_p }}
     <input type="submit" value="Log In" />
 </form>
+{% endblock %}
