--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
 
-{% if user_id %}
-    {% block login %}
-    <div class="btn pull-right"><a href="/logout">Logout</a></div>
-    <div class="span2 pull-right">
-        {{ user_id }}
-    </div>
-    {% endblock %}
-{% endif %}
+{% block username %}
+<div class="btn pull-right"><a href="/logout">Logout</a></div>
+<div class="span2 pull-right">
+    {{ user.first_name }} {{ user.last_name }} ({{ user.email }})
+</div>
+{% endblock %}
 
 {% block nav %}
     <li class="active"><a href="/">Inbox</a></li>
