--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 				padding-top: 40px;
 				padding-bottom: 40px;
 				background-color: #f5f5f5;
-				background-image: url("https://dl.dropbox.com/u/949104/grey.png");
+				background-image: url("/static/images/grey.png");
 			}
 			.form-signin .form-signin-heading,
 			.form-signin .checkbox {
