--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
         <title>Bulletin</title>
         <!-- Bootstrap -->
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-combined.min.css" rel="stylesheet">
-        <link href="/static/css/custom.css" rel="stylesheet">
+        <link href="static/css/custom.css" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid">
