Added a cohesive design to the registration/login pages along and started to work on the internal styling.

--- a/static_resources/css/custom.css
+++ b/static_resources/css/custom.css
@@ -1,6 +1,4 @@
-.container-fluid > div {
-    
-}
+/* Will start to phase out custom.css, please put additional stylings in site.css */
 
 .nav-tabs {
     margin-right: 0;
