--- a/templates/base.html
+++ b/templates/base.html
@@ -4,14 +4,12 @@
         <title>Bulletin</title>
         <!-- Bootstrap -->
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-combined.min.css" rel="stylesheet">
+			<link href="/static/css/site.css" rel="stylesheet">
         <link href="/static/css/custom.css" rel="stylesheet">
     </head>
     <body>
         <div class="container-fluid">
-            <div id='white' class="span2">.</div>
-            <div class="span5">
-                <h1>Bulletin<small> team communication</small></h1>
-            </div>
+            <h2>Bulletin<small> team communication</small></h2>
             {% block username %}
             <!-- 
             Empty intentionally.  Should be filled w/ username by
@@ -36,16 +34,15 @@
                     </ul>
                     <div id='content-container' class="tab-content span10">
                         <div class="tab-pane active">
-		                    <div id="announcement" class="hero-unit hero-unit-small">
+		                    <!--<div id="announcement" class="hero-unit hero-unit-small">
 		                        <h3>Announcement</h3>
 		                        <p>
 		                            Battle stations
 		                        </p>
-		                    </div>
+		                    </div>-->
 		                    <div id="content">
 			                    {% block content %}
-			                    <p>Content goes here</p>
-			                    <p>I really hope this doesn't show up</p>
+			                    <p>No Content</p>
 			                    {% endblock %}
 		                    </div>
 		                </div>
