--- a/templates/register.html
+++ b/templates/register.html
@@ -1,12 +1,10 @@
-{% extends "base.html" %}
+{% extends "simple-base.html" %}
 
-{% block nav %}
-<!-- empty -->
-{% endblock %}
-
-{% block content %}
-<form method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Register" />
-</form> 
+{% block formtype %}
+	<form class="form-signin" method="post">
+        <h2 class="form-signin-heading">Register your account</h2>
+        {{ form }}
+        <button class="btn btn-large btn-primary" type="submit">Register</button>
+        <a href='..'><button class="btn btn-large pull-right" type="button">Back</button></a>
+    </form>
 {% endblock %}
