Email confirmation also has a consistent design.

--- a/templates/confirm_email.html
+++ b/templates/confirm_email.html
@@ -1,17 +1,14 @@
-{% extends "base.html" %}
+{% extends "simple-base.html" %}
 
-{% block nav %}
-<!-- EMPTY! -->
-{% endblock %}
-
-{% block content %}
+{% block formtype %}
 {% if user %}
     <h3>Congratulations {{user.first_name}} {{user.last_name}}!</h3>
     <p>
     You have successfully registered your account 
-    for {{ user.email }} on Bulletin
+    for {{ user.email }} on Bulletin.
     </p>
 {% else %}
     <p>Invalid confirmation key.</p>
 {% endif %}
+<a href='../..'><button class="btn btn-large" type="button">Back to login</button></a>
 {% endblock %}
