--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -1,4 +1,25 @@
+/* Check and delete styles that conflict in custom.css*/
+
 body {
     background-color: #f5f5f5;
     background-image: url("/static/images/grey.png");
+}
+
+textarea {
+    height: 100px;
+    resize: none;
+}
+
+#main, .hero-unit {
+    padding: 19px 29px 29px;
+    margin: 0 20px;
+    background-color: #fff;
+    border: 1px solid #e5e5e5;
+    -webkit-border-radius: 5px;
+       -moz-border-radius: 5px;
+            border-radius: 5px;
+    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+       -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
+            box-shadow: 0 1px 2px rgba(0,0,0,.05);
+    font-size: 14px;
 }
