--- a/static_resources/css/custom.css
+++ b/static_resources/css/custom.css
@@ -14,16 +14,17 @@
 
 #tabs {
     margin-right: 0;
+    margin-bottom: 0;
 }
 
 #content-container {
     border: 1px solid #DDD;
     border-left: 0;
-    margin: 0 0 0 -1px;
+    margin: 0;
+    background-color: white;
 }
 
 #content {
-	border-left: 1px solid #DDD;
 	padding: 10px;
 }
 
@@ -54,7 +55,6 @@ textarea {
     display: block;
     height: 100px;
     resize: none;
-    margin: 10px;
 }
 
 
