Fixed the positioning of the user's identity, the displayed date time

--- a/static_resources/css/site.css
+++ b/static_resources/css/site.css
@@ -5,6 +5,10 @@ body {
     background-image: url("/static/images/grey.png");
 }
 
+#self-identity {
+	margin-right: 30px;
+}
+
 textarea {
     height: 100px;
     resize: none;
