--- a/templates/login.html
+++ b/templates/login.html
@@ -10,6 +10,6 @@
 		</label> -->
 		<button class="btn btn-large btn-primary" type="submit">Sign in</button>
 		<a href='register'><button class="btn btn-large" type="button">Register</button></a>
-		<a href='about'><button class="btn btn-large pull-right" type="button">About</button></a>
+		<a href='/about'><button class="btn btn-large pull-right" type="button">About</button></a>
 	</form>
 {% endblock %}
