--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
     <head>
         <title>Bulletin</title>
         <!-- Bootstrap -->
+        <link rel="shortcut icon" href="/static/images/favicon.ico">
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-combined.min.css" rel="stylesheet">
 		<link href="/static/css/site.css" rel="stylesheet">
         <link href="/static/css/custom.css" rel="stylesheet">
