--- a/templates/simple-base.html
+++ b/templates/simple-base.html
@@ -2,6 +2,7 @@
     <head>
         <title>Bulletin</title>
         <!-- Bootstrap -->
+        <link rel="shortcut icon" href="/static/images/favicon.ico">
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
 		<link href="/static/css/site.css" rel="stylesheet">
 		<link href="/static/css/login.css" rel="stylesheet">
