--- a/templates/about.html
+++ b/templates/about.html
@@ -3,6 +3,15 @@
 {% block formtype %}
 <h2 class="form-signin-heading">About</h2>
 <p>
-    info
+    Bulletin is being developed by: 
 </p>
+<ul>
+    <li>Caylan Lee</li>
+    <li>Yoong Woo Kim</li>
+    <li>Andrew Davies</li>
+    <li>Ivan Darmansyah</li>
+    <li>Peter Weisbeck</li>
+    <li>Brian Oliphant</li>
+    <li>Kyle Boone</li>
+</ul>
 {% endblock %}
