Set up about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,69 @@
 {% extends "simple-base.html" %}
 
 {% block formtype %}
-<h2 class="form-signin-heading">About</h2>
-<p>
-    info
-</p>
+<h2 class="form-signin-heading">What is Bulletin?</h2>
+<p>Bulletin is a collaboration tool for small, private groups. It enables anyone to quickly set up a space for private status updates and comments, which only the group members have access to, allowing quick and easy communication. As it grows, Bulletin will have more functionality to help groups get work done, like project agendas and task lists.</p>
+
+<hr />
+<h2>Our team</h2>
+<div class="row-fluid">
+	<div class="span3">
+	     <img src="https://dl.dropbox.com/u/949104/finn.jpg" alt="">
+	</div>
+	<div class="span3">
+	  <h4> Caylan Lee </h4>
+	  <p><em> Team Lead </em></p>
+	</div>
+	<div class="span3">
+	     <img src="http://placehold.it/300x300" alt="">
+	</div>
+	<div class="span3">
+	  <h4> Name </h4>
+	  <p><em> Title </em></p>
+	</div>
+</div>
+<br />
+<div class="row-fluid">
+	<div class="span3">
+	     <img src="http://placehold.it/300x300" alt="">
+	</div>
+	<div class="span3">
+	  <h4> Name </h4>
+	  <p><em> Title </em></p>
+	</div>
+	<div class="span3">
+	     <img src="http://placehold.it/300x300" alt="">
+	</div>
+	<div class="span3">
+	  <h4> Name </h4>
+	  <p><em> Title </em></p>
+	</div>
+</div>
+<br />
+<div class="row-fluid">
+	<div class="span3">
+	     <img src="http://placehold.it/300x300" alt="">
+	</div>
+	<div class="span3">
+	  <h4> Name </h4>
+	  <p><em> Title </em></p>
+	</div>
+	<div class="span3">
+	     <img src="http://placehold.it/300x300" alt="">
+	</div>
+	<div class="span3">
+	  <h4> Name </h4>
+	  <p><em> Title </em></p>
+	</div>
+</div>
+<br />
+<div class="row-fluid">
+	<div class="span3">
+	     <img src="http://placehold.it/300x300" alt="">
+	</div>
+	<div class="span3">
+	  <h4> Name </h4>
+	  <p><em> Title </em></p>
+	</div>
+</div>
 {% endblock %}
