--- a/templates/base.html
+++ b/templates/base.html
@@ -27,9 +27,10 @@
                         until we have properly working user logins.
                         -->
                         {% block nav %}
-                        <li><a href="/">Inbox</a></li>
-                        <li><a href="/group/1/">Group 1</a></li>
-                        <li><a href="/group/2/">Group 2</a></li>
+                        <li class="active"><a href="/">Inbox</a></li>
+                        <li><a href="/group/1/">Company</a></li>
+                        <li><a href="/group/2/">Design Team</a></li>
+                        <li><a href="/group/3/">Roomies</a></li>
                         {% endblock %}
                     </ul>
                     <div id='content-container' class="tab-content span10">
