--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,6 @@
 </div>
 {% endblock %}
 
-{% block nav %}
-    <li class="active"><a href="/">Inbox</a></li>
-    <li><a href="/group/1/">Group 1</a></li>
-    <li><a href="/group/2/">Group 2</a></li>
+{% block content %}
+
 {% endblock %}
