--- a/templates/about.html
+++ b/templates/about.html
@@ -9,9 +9,14 @@
     <li>Caylan Lee</li>
     <li>Yoong Woo Kim</li>
     <li>Andrew Davies</li>
-    <li>Ivan Darmansyah</li>
+    <li class="well">
+        <img src="http://m.c.lnkd.licdn.com/mpr/mpr/shrink_200_200/p/4/000/176/263/229bbff.jpg" width="80" class="img-rounded dev-profile-pic" alt="Ivan Darmansyah" />
+        <span>Ivan Darmansyah</span>
+    </li>
     <li>Peter Weisbeck</li>
     <li>Brian Oliphant</li>
     <li>Kyle Boone</li>
 </ul>
+
+<a href='..'><input type="button" class="btn btn-large pull-right" value="Back"></a>
 {% endblock %}
