--- a/templates/register.html
+++ b/templates/register.html
@@ -5,6 +5,6 @@
         <h2 class="form-signin-heading">Register your account</h2>
         {{ form }}
         <button class="btn btn-large btn-primary" type="submit">Register</button>
-        <a href='..'><button class="btn btn-large pull-right" type="button">Back</button></a>
+        <a href='..'><input type="button" class="btn btn-large pull-right" value="Back"></a>
     </form>
 {% endblock %}
