--- a/templates/simple-base.html
+++ b/templates/simple-base.html
@@ -10,7 +10,7 @@
     <body>
 		<div class="container">
 			<div class="span8 offset2">
-			<div class="hero-unit">
+			<div class="hero-unit clearfix">
 				<h1>Bulletin</h1>
 				<hr />
 				<h3>{{ state }}</h3>
