about me picture

--- a/templates/about.html
+++ b/templates/about.html
@@ -50,7 +50,7 @@
 	  <p><em> Front End </em></p>
 	</div>
 	<div class="span3">
-	     <img src="http://placehold.it/300x300" alt="Kyle">
+	     <img src="https://gravatar.com/avatar/e6973ed7e8ab0eb6ad316477177cf04f?s=300&d=mm" alt="Kyle">
 	</div>
 	<div class="span3">
 	  <h4> Kyle Boone </h4>
