added to about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -16,7 +16,7 @@
 	  <p><em> Team Lead </em></p>
 	</div>
 	<div class="span3">
-	     <img src="http://placehold.it/300x300" alt="Yoong">
+	     <img src="https://dl.dropbox.com/s/wfz2t7fw985qr38/ppc.jpg" alt="Yoong">
 	</div>
 	<div class="span3">
 	  <h4> Yoong Kim </h4>
