Added picture to about page.

--- a/templates/about.html
+++ b/templates/about.html
@@ -43,7 +43,7 @@
 <br />
 <div class="row-fluid">
 	<div class="span3">
-	     <img src="http://placehold.it/300x300" alt="Peter">
+	     <img src="http://photos-2.dropbox.com/t/0/AACUoXAe36AnJ4vxNGReGwO9vARKiUYuvsrQlQUzMyqR2w/10/1588283/jpeg/200x200/1/_/0/4/profile.jpg/n0xwr6nyeb13odr/1FvHVY2nCZ/profile.jpg" alt="Peter">
 	</div>
 	<div class="span3">
 	  <h4> Peter Weisbeck </h4>
