Changed catchphrase to "communication"
Something a little less tongue in cheek.

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <div class="container-fluid">
-            <div class="span5"><h2>Bulletin<small> catchy phrase here</small></h2></div>
+            <div class="span5"><h2>Bulletin<small> communication</small></h2></div>
             {% block username %}
             <!-- 
             Empty intentionally.  Should be filled w/ username by
