--- a/templates/index.html
+++ b/templates/index.html
@@ -8,5 +8,8 @@
 {% endblock %}
 
 {% block content %}
-
+<div class="well" style="text-align: center">
+	<h1>inbox</h1>
+	<p><em>coming soon</em></p>
+</div>
 {% endblock %}
