Added picture of myself.

--- a/templates/about.html
+++ b/templates/about.html
@@ -33,7 +33,7 @@
 	  <p><em> Front End </em></p>
 	</div>
 	<div class="span3">
-	     <img src="http://placehold.it/300x300" alt="Andrew">
+	     <img src="https://dl.dropbox.com/s/86r8mbtpjryecom/me_tie.jpg" alt="Andrew">
 	</div>
 	<div class="span3">
 	  <h4> Andrew Davies </h4>
