--- a/templates/about.html
+++ b/templates/about.html
@@ -60,7 +60,7 @@
 <br />
 <div class="row-fluid">
 	<div class="span3">
-	     <img src="http://placehold.it/300x300" alt="Brian">
+	     <img src="https://dl.dropbox.com/s/9if59cc6lg2fe73/1352152367380.jpg" alt="Brian">
 	</div>
 	<div class="span3">
 	  <h4> Brian Oliphant </h4>
